231224 공부정리하며 commit

--- a/일지/231225.md
+++ b/일지/231225.md
@@ -1,5 +1,6 @@
 ### vscode 기능
 
-- h1#test 엔터 : `html <h1 id="test></h1>` 태그 자동생성
-- h1.test 엔터 : `html <h1 class="test"></h1>` 태그 자동생성
+- h1#test 엔터 : `<h1 id="test></h1>` 태그 자동생성
+- h1.test 엔터 : `<h1 class="test"></h1>` 태그 자동생성
 - ! 엔터 : html 코드 자동생성
+- Ctrl + d 여러번 : 해당 word multiple selection (누를 때마다 선택을 늘려나간다)
