25일 공부 내용 commit

--- a/일지/231224.md
+++ b/일지/231224.md
@@ -1,19 +1,6 @@
-### VSCode 작업공간과 Github 연결하기
+### vscode 기능
 
-- [github repository를 vscode에 추가하기](https://www.techrepublic.com/article/add-github-vs-code/)
-  - Clone Repository
-  - Paste the address of your repository in that address bar
-  - select a local repository location (난 50.Dev)
-  - authorize VS Code access to the account
-- [Commit을 하려고 하니 Git remote: Invalide username or password 에러가 날 때](https://realzzu.tistory.com/115)
-  - 원격저장소를 연결 해제했다가 다시 연결해서 해결해보자. 
-  - $ git remote remove origin
-  - $ git remote add origin https://github.com/깃허브아이디/깃허브저장소명.git
-  - $ git push --set-upstream origin main
-  - 로그인 화면에서 토큰을 통한 로그인 선택, 토큰 입력
-- [Github의 access token 생성하기](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens)
-
-### udemy 강좌 선택
-- nomadcoders에서 제공하는 기본 강좌를 끝냈기 때문에 다음에 들을 강좌를 udemy에서 골랐음
-- **The Web Developer Bootcamp 2023** : 지나치게 자세한 강좌로 보임. 게다가 난 css를 자세히 알고 싶지도 않고, 이것저것 애매모호하게 공부했던 기억들이 있어서 나에겐 적절한 강좌가 아닌 것으로 보임
-- **20 Web Projects With Vanilla JavaScript** : 프로젝트 단위로 배우는 게 나에겐 더 적절해 보여서, 이 강좌로 공부를 계속하기로 결정. https://lguplus.udemy.com/course/web-projects-with-vanilla-javascript/ 
+- h1#test 엔터 : `<h1 id="test></h1>` 태그 자동생성
+- h1.test 엔터 : `<h1 class="test"></h1>` 태그 자동생성
+- ! 엔터 : html 코드 자동생성
+- Ctrl + d 여러번 : 해당 word multiple selection (누를 때마다 선택을 늘려나간다)
