--- a/일지/231225.md
+++ b/일지/231225.md
@@ -1,6 +1,4 @@
-### vscode 기능
+### 공부한 내용
 
-- h1#test 엔터 : `<h1 id="test></h1>` 태그 자동생성
-- h1.test 엔터 : `<h1 class="test"></h1>` 태그 자동생성
-- ! 엔터 : html 코드 자동생성
-- Ctrl + d 여러번 : 해당 word multiple selection (누를 때마다 선택을 늘려나간다)
+- udemy 20 프로젝트 강의는 생각보다 발음이나 강의 질이 괜찮아서 그냥 들어도 시간이 낭비되는 느낌이 없었다.
+- 오늘은 크리스마스인 관계로 짧게 공부하고 마무리함.
